package br.unitins.topicos1.guitar.model;

public enum CorpoViolao {
    BRACO,
    ESCALA,
    CABECA,
    TRASTE
}
